--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "krasn/cms",
-    "require": {},
+    "require": {
+        "fxp/composer-asset-plugin": "^1.3",
+        "bower-asset/bootstrap": "^3.3"
+    },
     "autoload":{
         "psr-4":{
             "app\\":"app/",
@@ -14,6 +17,11 @@
             "frontend\\models\\":"frontend/models/",
             "frontend\\view\\":"frontend/view/",
             "common\\models\\":"common/models/"
+        }
+    },
+    "extra": {
+        "asset-installer-paths": {
+            "bower-asset-library": "frontend/web/assets"
         }
     }
 }
