--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,15 @@
     },
     "autoload":{
         "psr-4":{
-            "app\\":"app/",
-            "app\\database\\":"app/database/",
-            "app\\engine\\":"app//engine/",
-            "app\\lib\\":"app/lib/",
-            "backend\\controllers\\":"backend/controllers/",
-            "backend\\models\\":"backend/models/",
-            "backend\\view\\":"backend/view/",
-            "frontend\\controllers\\":"frontend/controllers/",
-            "frontend\\models\\":"frontend/models/",
-            "frontend\\view\\":"frontend/view/",
-            "common\\models\\":"common/models/"
+            "core\\":"vendor/core/",
+            "core\\lib\\":"vendor/core/lib/",
+            "core\\helpers\\":"vendor/core/helpers/",
+            "app\\controllers\\":"app/controllers/"
         }
     },
     "extra": {
         "asset-installer-paths": {
-            "bower-asset-library": "frontend/web/assets"
+            "bower-asset-library": "web/assets"
         }
     }
 }
