--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
 .idea/
 /web/assets/
-/vendor/illuminate/
-/vendor/autoload.php
-/vendor/fxp/
-/vendor/nextras/
-/vendor/mustache/
-/vendor/doctrine/
-/vendor/composer/
-/vendor/erusev/
-/vendor/erdiko/
-/vendor/symfony/
-/vendor/paragonie/
-/vendor/psr/
-/vendor/nesbot/
-/vendor/bin/
+/vendor/
+!/vendor/core/
