--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
         "fxp/composer-asset-plugin": "^1.3",
         "bower-asset/bootstrap": "^3.3",
         "erdiko/eloquent": "^1.0",
-        "nextras/migrations": "^3.0",
-        "nextras/dbal": "^2.1"
+        "ruckusing/ruckusing-migrations": "^1.1"
     },
     "autoload":{
         "psr-4":{
