--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 AddDefaultCharset utf-8
 RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ web/$1
