--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "fxp/composer-asset-plugin": "^1.3",
         "bower-asset/bootstrap": "^3.3",
         "erdiko/eloquent": "^1.0",
-        "ruckusing/ruckusing-migrations": "^1.1"
+        "robmorgan/phinx": "^0.8.0"
     },
     "autoload":{
         "psr-4":{
