Create cache controller

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 .idea/
 /web/assets/
-/vendor/
-!/vendor/core/
 /cache/
+/vendor/composer/
+/vendor/bin/
+/vendor/robmorgan/
+/vendor/illuminate/
+/vendor/autoload.php
+/vendor/erusev/
+/vendor/fxp/
+/vendor/erdiko/
+/vendor/symfony/
+/vendor/mustache/
+/vendor/paragonie/
+/vendor/psr/
+/vendor/nesbot/
+/vendor/doctrine/
+!/vendor/core/
